--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-12-16  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_init),
+	(gst_ffmpegdec_close), (gst_ffmpegdec_connect),
+	(gst_ffmpegdec_negotiate), (gst_ffmpegdec_chain):
+	  Move negotiation outside the _chain function, and use the
+	  codec PAR if available and prefer it over demuxer PAR (since
+	  this is usually the right thing to do). Fixes #159755.
+
 2004-12-16  Sebastien Cote  <sc5@hermes.usherb.ca>
 
 	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
