ext/ffmpeg/gstffmpegdec.c: Include optional parser if supported (currently only MPEG-1/-2 video). This fixes playback...
Original commit message from CVS:
* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_init),
(gst_ffmpegdec_close), (gst_ffmpegdec_open), (gst_ffmpegdec_chain):
Include optional parser if supported (currently only MPEG-1/-2
video). This fixes playback of MPEG-1/-2 videos using
ffdec_mpeg2video.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-12-17  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_init),
+	(gst_ffmpegdec_close), (gst_ffmpegdec_open), (gst_ffmpegdec_chain):
+	  Include optional parser if supported (currently only MPEG-1/-2
+	  video). This fixes playback of MPEG-1/-2 videos using
+	  ffdec_mpeg2video.
+
+2004-12-17  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_base_init),
 	(gst_ffmpegenc_init), (gst_ffmpegenc_getcaps),
 	(gst_ffmpegenc_link):
