--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-12-17  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* ext/ffmpeg/gstffmpegcodecmap.c:
+	(gst_ffmpeg_get_codecid_longname):
+	  Fix typo.
+
+2004-12-17  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_chain):
 	  Small parsing fix in comb. with ffdemux_mpeg.
 
