--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,37 @@
+This is GStreamer FFmpeg 0.8.3
+
+Changes since 0.8.2:
+	Demuxers:
+	* don't close pads/demuxers while processing
+	* add ranks so it can replace others in gst-plugins
+
+	Decoders:
+	* add parsing for mpeg video
+
+	Encoders:
+	* fix video negotiation
+
+	General:
+	* snapshot update to dec 16th 2004
+
+Bugs fixed since 0.8.2:
+      * 137552 : [ffenc_h263p] segfaults
+      * 138672 : [ffdec_msvc] Horseb~1.avi
+      * 140137 : [ffdec_msmpeg4] Can't play pokem.avi
+      * 148479 : [ffenc_mpeg4] broken
+      * 150495 : [build] gst-ffmpeg build failure on Solaris
+      * 152693 : [PATCH] [build] Compile errors with gcc 2.95
+      * 155212 : crash in gstffmpegdec
+      * 155274 : [ffdec_mp3] ID3 handling by gst-ffmpeg
+      * 155363 : [build] gst-ffmpeg fails to build RPMS from CVS
+      * 156920 : [PATCH][ffmpegdemux] close before forwarding event...
+      * 157702 : [mpeg] file that ffmpeg fails to play correctly
+      * 159319 : castaway.mov looks bad
+      * 159755 : [PATCH] use ffmpeg pixel-aspect-ratio if available
+      * 160318 : [ff[dec|enc]_mjpeg] should support image/jpeg
+      * 161395 : Quicktime Video Causing segfault
+      * 162215 : resetting rank for mp3demux
+
 This is GStreamer FFmpeg 0.8.2
 
 Changes since 0.8.1:
