--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* configure.ac:
+	  Dev.
+
 === release 0.8.3 === 
 
 2004-12-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
